--- a/Weather app/style.css
+++ b/Weather app/style.css
@@ -74,3 +74,33 @@ body {
     margin-top: 50px;
     
 }
+.col {
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+.col img {
+    width: 40px;
+    margin-right: 10px;
+}
+
+.humidity,.wind{
+    font-size: 28px;
+    margin-top: -6px;
+}
+
+.weather {
+    display: none;
+}
+
+.error {
+    display: none;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.error p {
+    font-size: 24px;
+    color: #fff;
+}
